--- a/ueberuns.html
+++ b/ueberuns.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tennisgruppe Fischbeck - Förderverein</title>
+    <title>Über uns - Tennisgruppe Fischbeck</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -54,15 +54,6 @@
             font-size: 1.2rem;
             margin: 1rem 0 2rem;
         }
-        .buttons a {
-            text-decoration: none;
-            padding: 0.75rem 1.5rem;
-            background-color: white;
-            color: #0056a6;
-            border-radius: 5px;
-            margin: 0 0.5rem;
-            font-weight: bold;
-        }
         .content {
             padding: 2rem;
         }
@@ -70,26 +61,20 @@
             text-align: center;
             color: #0056a6;
         }
-        .content .sections {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 2rem;
+        .content p {
+            line-height: 1.8;
+            text-align: justify;
+            margin: 1rem 0;
+        }
+        .content .timeline {
             margin-top: 2rem;
         }
-        .content .section {
-            background: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 1.5rem;
-            border-radius: 10px;
-            text-align: center;
-            flex: 1 1 300px;
+        .content .timeline h3 {
+            color: #0056a6;
+            margin-bottom: 0.5rem;
         }
-        .content .section img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            margin-bottom: 1rem;
+        .content .timeline p {
+            margin: 0.5rem 0 1.5rem;
         }
         footer {
             background-color: #0056a6;
@@ -109,38 +94,31 @@
                 <li><a href="spenden.html">Spenden</a></li>
                 <li><a href="mitglied.html">Login</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
-                <li><a href="https://tscfischbeck.courtbooking.de/login.php?frwrd=index.php" target="_blank">Court Booking</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero">
-        <h1>Förderverein Tennisgruppe Fischbeck</h1>
-        <p>Unterstützen Sie uns dabei, den Tennissport in unserer Region zu fördern!</p>
-        <div class="buttons">
-            <a href="#">Jetzt spenden</a>
-            <a href="#">Mitglied werden</a>
-        </div>
+        <h1>Über uns</h1>
+        <p>Die Geschichte und Vision unseres Vereins seit 1907.</p>
     </section>
 
     <main class="content">
-        <h2>Unsere Mission</h2>
-        <div class="sections">
-            <div class="section">
-                <img src="https://github.com/v1nch4n/fischbeck/blob/main/donate_icon_217687.png" alt="Spenden">
-                <h3>Spenden</h3>
-                <p>Unterstützen Sie uns finanziell, um neue Projekte zu realisieren und bestehende zu verbessern.</p>
-            </div>
-            <div class="section">
-                <img src="https://github.com/v1nch4n/fischbeck/blob/main/picking_select_member_team_selection_user_choice_icon_262968.png" alt="Mitglied werden">
-                <h3>Mitglied werden</h3>
-                <p>Werden Sie Teil unseres Teams und genießen Sie die Vorteile einer Mitgliedschaft.</p>
-            </div>
-            <div class="section">
-                <img src="https://github.com/v1nch4n/fischbeck/blob/main/tennisplayer_89254.png" alt="Infos teilen">
-                <h3>Infos teilen</h3>
-                <p>Erfahren Sie mehr über unsere Aktivitäten und teilen Sie unsere Vision mit anderen.</p>
-            </div>
+        <h2>Unsere Geschichte</h2>
+        <p>Die Tennisgruppe Fischbeck wurde 1907 gegründet und hat sich seither zu einem der traditionsreichsten Vereine in der Region entwickelt. Mit einer tiefen Verwurzelung in der Gemeinschaft steht unser Verein für Leidenschaft, Engagement und sportlichen Erfolg.</p>
+
+        <div class="timeline">
+            <h3>1907 - Die Gründung</h3>
+            <p>Im Jahr 1907 schlossen sich eine Gruppe von Tennisbegeisterten zusammen, um den Verein zu gründen. Der erste Tennisplatz wurde in der Nähe des Fischbecker Parks errichtet.</p>
+
+            <h3>1950 - Ausbau der Anlagen</h3>
+            <p>In den 1950er Jahren wurde die Anlage erweitert, um den wachsenden Mitgliederzahlen gerecht zu werden. Neue Plätze und ein kleines Vereinsheim wurden hinzugefügt.</p>
+
+            <h3>1990 - Erfolge und Turniere</h3>
+            <p>Der Verein wurde Gastgeber zahlreicher regionaler Turniere und feierte große Erfolge durch seine Spielerinnen und Spieler.</p>
+
+            <h3>2025 - Zukunft gestalten</h3>
+            <p>Heute steht der Verein vor der spannenden Aufgabe, neue Mitglieder zu gewinnen und mit Hilfe des Fördervereins den Tennissport in Fischbeck nachhaltig zu fördern.</p>
         </div>
     </main>
 
