--- a/index.html
+++ b/index.html
@@ -20,24 +20,70 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: relative;
         }
         header .logo {
             font-size: 1.5rem;
             font-weight: bold;
+            display: flex;
+            align-items: center;
+        }
+        header .logo img {
+            max-height: 40px;
+            margin-right: 10px;
+        }
+        nav {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            background-color: #0056a6;
+            display: none;
+            flex-direction: column;
+            align-items: center;
         }
         nav ul {
             list-style: none;
             margin: 0;
             padding: 0;
-            display: flex;
+            width: 100%;
+            text-align: center;
         }
         nav ul li {
-            margin: 0 1rem;
+            margin: 0;
+            padding: 1rem 0;
         }
         nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: 400;
+        }
+        .burger {
+            display: none;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 24px;
+            height: 18px;
+            cursor: pointer;
+        }
+        .burger div {
+            width: 100%;
+            height: 3px;
+            background-color: white;
+        }
+        @media (max-width: 768px) {
+            .burger {
+                display: flex;
+            }
+            nav {
+                display: flex;
+            }
+            nav ul {
+                display: none;
+            }
+            nav.active ul {
+                display: block;
+            }
         }
         .hero {
             text-align: center;
@@ -98,16 +144,34 @@
             padding: 1rem 0;
         }
     </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const burger = document.querySelector('.burger');
+            const nav = document.querySelector('nav');
+
+            burger.addEventListener('click', function() {
+                nav.classList.toggle('active');
+            });
+        });
+    </script>
 </head>
 <body>
     <header>
-        <div class="logo">Tennisgruppe Fischbeck</div>
+        <div class="logo">
+            <img src="https://via.placeholder.com/150x40?text=Logo" alt="Tennisgruppe Logo">
+            Tennisgruppe Fischbeck
+        </div>
+        <div class="burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ueberuns.html">Über uns</a></li>
                 <li><a href="spenden.html">Spenden</a></li>
-                <li><a href="mitglied.html">Login</a></li>
+                <li><a href="mitglied.html">Mitglied werden</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
                 <li><a href="https://tscfischbeck.courtbooking.de/login.php?frwrd=index.php" target="_blank">Court Booking</a></li>
             </ul>
@@ -127,17 +191,17 @@
         <h2>Unsere Mission</h2>
         <div class="sections">
             <div class="section">
-                <img src="https://github.com/v1nch4n/fischbeck/blob/main/donate_icon_217687.png" alt="Spenden">
+                <img src="https://source.unsplash.com/300x200/?donation" alt="Spenden">
                 <h3>Spenden</h3>
                 <p>Unterstützen Sie uns finanziell, um neue Projekte zu realisieren und bestehende zu verbessern.</p>
             </div>
             <div class="section">
-                <img src="https://github.com/v1nch4n/fischbeck/blob/main/picking_select_member_team_selection_user_choice_icon_262968.png" alt="Mitglied werden">
+                <img src="https://source.unsplash.com/300x200/?teamwork" alt="Mitglied werden">
                 <h3>Mitglied werden</h3>
                 <p>Werden Sie Teil unseres Teams und genießen Sie die Vorteile einer Mitgliedschaft.</p>
             </div>
             <div class="section">
-                <img src="https://github.com/v1nch4n/fischbeck/blob/main/tennisplayer_89254.png" alt="Infos teilen">
+                <img src="https://source.unsplash.com/300x200/?share" alt="Infos teilen">
                 <h3>Infos teilen</h3>
                 <p>Erfahren Sie mehr über unsere Aktivitäten und teilen Sie unsere Vision mit anderen.</p>
             </div>
