--- a/mitglied.html
+++ b/mitglied.html
@@ -20,24 +20,64 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: relative;
         }
         header .logo {
             font-size: 1.5rem;
             font-weight: bold;
         }
+        nav {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            background-color: #0056a6;
+            display: none;
+            flex-direction: column;
+            align-items: center;
+        }
         nav ul {
             list-style: none;
             margin: 0;
             padding: 0;
-            display: flex;
+            width: 100%;
+            text-align: center;
         }
         nav ul li {
-            margin: 0 1rem;
+            margin: 0;
+            padding: 1rem 0;
         }
         nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: 400;
+        }
+        .burger {
+            display: none;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 24px;
+            height: 18px;
+            cursor: pointer;
+        }
+        .burger div {
+            width: 100%;
+            height: 3px;
+            background-color: white;
+        }
+        @media (max-width: 768px) {
+            .burger {
+                display: flex;
+            }
+            nav {
+                display: flex;
+            }
+            nav ul {
+                display: none;
+            }
+            nav.active ul {
+                display: block;
+            }
         }
         .hero {
             text-align: center;
@@ -70,6 +110,9 @@
             padding: 0.75rem 1.5rem;
             border-radius: 5px;
             font-weight: bold;
+        }
+        .content .section {
+            margin-top: 2rem;
         }
         .content form {
             max-width: 600px;
@@ -111,16 +154,32 @@
             padding: 1rem 0;
         }
     </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const burger = document.querySelector('.burger');
+            const nav = document.querySelector('nav');
+
+            burger.addEventListener('click', function() {
+                nav.classList.toggle('active');
+            });
+        });
+    </script>
 </head>
 <body>
     <header>
         <div class="logo">Tennisgruppe Fischbeck</div>
+        <div class="burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="./ueber_uns.html">Über uns</a></li>
-                <li><a href="#">Spenden</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="spenden.html">Spenden</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="https://tscfischbeck.courtbooking.de/login.php?frwrd=index.php" target="_blank">Court Booking</a></li>
             </ul>
         </nav>
     </header>
@@ -133,51 +192,59 @@
     <main class="content">
         <h2>Wähle deine Option</h2>
         <div class="options">
-            <a href="#">Mit Facebook anmelden</a>
-            <a href="#">Mit Google anmelden</a>
-        </div>
+            <div class="section">
+                <h3>Mitglied-Login</h3>
+                <a href="#">Mit Facebook einloggen</a>
+                <a href="#">Mit Google einloggen</a>
+                <form action="#" method="POST">
+                    <div>
+                        <label for="login-email">E-Mail-Adresse</label>
+                        <input type="email" id="login-email" name="login-email" required>
+                    </div>
+                    <div>
+                        <label for="login-password">Passwort</label>
+                        <input type="password" id="login-password" name="login-password" required>
+                    </div>
+                    <button type="submit">Einloggen</button>
+                </form>
+            </div>
 
-        <h2>Oder melde dich direkt an</h2>
-        <form action="#" method="POST">
-            <div>
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
+            <div class="section">
+                <h3>Mitglied werden</h3>
+                <a href="#">Mit Facebook anmelden</a>
+                <a href="#">Mit Google anmelden</a>
+                <form action="#" method="POST">
+                    <div>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div>
+                        <label for="vorname">Vorname</label>
+                        <input type="text" id="vorname" name="vorname" required>
+                    </div>
+                    <div>
+                        <label for="email">E-Mail-Adresse</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div>
+                        <label for="telefon">Telefonnummer</label>
+                        <input type="tel" id="telefon" name="telefon" required>
+                    </div>
+                    <div>
+                        <label for="geburtsdatum">Geburtsdatum</label>
+                        <input type="date" id="geburtsdatum" name="geburtsdatum" required>
+                    </div>
+                    <div>
+                        <label for="zahlungsart">Zahlungsart</label>
+                        <select id="zahlungsart" name="zahlungsart" required>
+                            <option value="rechnung">Rechnung</option>
+                            <option value="lastschrift">Lastschrift</option>
+                        </select>
+                    </div>
+                    <button type="submit">Anmelden</button>
+                </form>
             </div>
-            <div>
-                <label for="vorname">Vorname</label>
-                <input type="text" id="vorname" name="vorname" required>
-            </div>
-            <div>
-                <label for="email">E-Mail-Adresse</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div>
-                <label for="telefon">Telefonnummer</label>
-                <input type="tel" id="telefon" name="telefon" required>
-            </div>
-            <div>
-                <label for="geburtsdatum">Geburtsdatum</label>
-                <input type="date" id="geburtsdatum" name="geburtsdatum" required>
-            </div>
-            <div>
-                <label for="sparten">Sparten</label>
-                <select id="sparten" name="sparten" required>
-                    <option value="">Bitte wählen</option>
-                    <option value="tennis">Tennis</option>
-                    <option value="darts">Darts</option>
-                    <option value="boule">Boule</option>
-                    <option value="leichtathletik">Leichtathletik</option>
-                </select>
-            </div>
-            <div>
-                <label for="zahlungsart">Zahlungsart</label>
-                <select id="zahlungsart" name="zahlungsart" required>
-                    <option value="rechnung">Rechnung</option>
-                    <option value="lastschrift">Lastschrift</option>
-                </select>
-            </div>
-            <button type="submit">Anmelden</button>
-        </form>
+        </div>
     </main>
 
     <footer>
