--- a/mitglied.html
+++ b/mitglied.html
@@ -78,6 +78,13 @@
             nav.active ul {
                 display: block;
             }
+            .content .options a {
+                width: 100%;
+                text-align: center;
+            }
+            .content .options {
+                flex-direction: column;
+            }
         }
         .hero {
             text-align: center;
@@ -98,9 +105,8 @@
         }
         .content .options {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 2rem;
+            gap: 1rem;
+            justify-content: center;
             margin-top: 2rem;
         }
         .content .options a {
@@ -175,11 +181,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="./ueber_uns.html">Über uns</a></li>
-                <li><a href="spenden.html">Spenden</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
-                <li><a href="https://tscfischbeck.courtbooking.de/login.php?frwrd=index.php" target="_blank">Court Booking</a></li>
+                <li><a href="#">Spenden</a></li>
+                <li><a href="#">Kontakt</a></li>
             </ul>
         </nav>
     </header>
