--- a/kontakt.html
+++ b/kontakt.html
@@ -20,24 +20,64 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: relative;
         }
         header .logo {
             font-size: 1.5rem;
             font-weight: bold;
         }
+        nav {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            background-color: #0056a6;
+            display: none;
+            flex-direction: column;
+            align-items: center;
+        }
         nav ul {
             list-style: none;
             margin: 0;
             padding: 0;
-            display: flex;
+            width: 100%;
+            text-align: center;
         }
         nav ul li {
-            margin: 0 1rem;
+            margin: 0;
+            padding: 1rem 0;
         }
         nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: 400;
+        }
+        .burger {
+            display: none;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 24px;
+            height: 18px;
+            cursor: pointer;
+        }
+        .burger div {
+            width: 100%;
+            height: 3px;
+            background-color: white;
+        }
+        @media (max-width: 768px) {
+            .burger {
+                display: flex;
+            }
+            nav {
+                display: flex;
+            }
+            nav ul {
+                display: none;
+            }
+            nav.active ul {
+                display: block;
+            }
         }
         .hero {
             text-align: center;
@@ -76,16 +116,31 @@
             padding: 1rem 0;
         }
     </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const burger = document.querySelector('.burger');
+            const nav = document.querySelector('nav');
+
+            burger.addEventListener('click', function() {
+                nav.classList.toggle('active');
+            });
+        });
+    </script>
 </head>
 <body>
     <header>
         <div class="logo">Tennisgruppe Fischbeck</div>
+        <div class="burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="ueberuns.html">Über uns</a></li>
+                <li><a href="ueber_uns.html">Über uns</a></li>
                 <li><a href="spenden.html">Spenden</a></li>
-                <li><a href="mitglied.html">Login</a></li>
+                <li><a href="mitglied.html">Mitglied werden</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
