--- a/mitglied.html
+++ b/mitglied.html
@@ -78,10 +78,6 @@
             nav.active ul {
                 display: block;
             }
-            .content .options a {
-                width: 100%;
-                text-align: center;
-            }
             .content .options {
                 flex-direction: column;
             }
@@ -105,6 +101,7 @@
         }
         .content .options {
             display: flex;
+            flex-direction: column;
             gap: 1rem;
             justify-content: center;
             margin-top: 2rem;
@@ -116,6 +113,7 @@
             padding: 0.75rem 1.5rem;
             border-radius: 5px;
             font-weight: bold;
+            text-align: center;
         }
         .content .section {
             margin-top: 2rem;
@@ -181,10 +179,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="./ueber_uns.html">Über uns</a></li>
-                <li><a href="#">Spenden</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="ueber_uns.html">Über uns</a></li>
+                <li><a href="spenden.html">Spenden</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="https://tscfischbeck.courtbooking.de/login.php?frwrd=index.php" target="_blank">Court Booking</a></li>
             </ul>
         </nav>
     </header>
