--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="https://via.placeholder.com/150x40?text=Logo" alt="Tennisgruppe Logo">
+            <img src="TSC_Fischbeck_Logo.png" alt="Tennisgruppe Logo">
             Tennisgruppe Fischbeck
         </div>
         <div class="burger">
@@ -190,17 +190,17 @@
         <h2>Unsere Mission</h2>
         <div class="sections">
             <div class="section">
-                <img src="https://source.unsplash.com/300x200/?donation" alt="Spenden">
+                <img src="spenden.png" alt="Spenden">
                 <h3>Spenden</h3>
                 <p>Unterstützen Sie uns finanziell, um neue Projekte zu realisieren und bestehende zu verbessern.</p>
             </div>
             <div class="section">
-                <img src="https://source.unsplash.com/300x200/?teamwork" alt="Mitglied werden">
+                <img src="mitglied.png" alt="Mitglied werden">
                 <h3>Mitglied werden</h3>
                 <p>Werden Sie Teil unseres Teams und genießen Sie die Vorteile einer Mitgliedschaft.</p>
             </div>
             <div class="section">
-                <img src="https://source.unsplash.com/300x200/?share" alt="Infos teilen">
+                <img src="infos.png" alt="Infos teilen">
                 <h3>Infos teilen</h3>
                 <p>Erfahren Sie mehr über unsere Aktivitäten und teilen Sie unsere Vision mit anderen.</p>
             </div>
