--- a/index.html
+++ b/index.html
@@ -190,17 +190,17 @@
         <h2>Unsere Mission</h2>
         <div class="sections">
             <div class="section">
-                <img src="spenden.png" alt="Spenden">
+                <img src="spenden.png" alt="Spenden" style="width: 100px; height: auto; max-width: 100%;">
                 <h3>Spenden</h3>
                 <p>Unterstützen Sie uns finanziell, um neue Projekte zu realisieren und bestehende zu verbessern.</p>
             </div>
             <div class="section">
-                <img src="mitglied.png" alt="Mitglied werden">
+                <img src="mitglied.png" alt="Mitglied werden" style="width: 100px; height: auto; max-width: 100%;">
                 <h3>Mitglied werden</h3>
                 <p>Werden Sie Teil unseres Teams und genießen Sie die Vorteile einer Mitgliedschaft.</p>
             </div>
             <div class="section">
-                <img src="infos.png" alt="Infos teilen">
+                <img src="infos.png" alt="Infos teilen" style="width: 100px; height: auto; max-width: 100%;">
                 <h3>Infos teilen</h3>
                 <p>Erfahren Sie mehr über unsere Aktivitäten und teilen Sie unsere Vision mit anderen.</p>
             </div>
